# cellframe-node

./: .clangd  .cursorrules  .gitignore  .gitlab-ci-python-sdk.yml  .gitlab-ci.yml  .gitmodules  .slc_usage_stats.json  .travis.yml  CHANGELOG  CMakeLists.txt  COMMIT-HISTORY-FEATURE-16121.md  DIAGTOOL-PIPELINE-SETUP.md  DIAGTOOL-SEPARATION-QUICK-REFERENCE.md  FEATURE-16121-DIAGTOOL-SEPARATION.md  GITLAB_SETUP.md  Makefile.win  PHASE_3_REPORT.md  PHASE_3_TEST_OPTIMIZATION_TASK.json  PYTHON_DAP_BINDINGS_AUDIT_REPORT.md  QA_FINAL_SUMMARY.md  QA_PROJECT_SUMMARY.md  QA_SPECIFICATION_LINUX.md  QA_TEST_REPORT.md  README.md  SECURITY_FIXES.md  SERVICES.md  TESTING_GUIDE_BUG_18923.md  TEST_EXECUTION_REPORT.md  TROUBLESHOOTING.md  build.sh  cfg.python.wrapper.in  cross_references_report.md  dap_cellframe_docs.textile  debian  debug_segfault.py  debug_segfault_minimal.py  final_documentation_report.md  perf.data  perf.data.old  performance_report.html  (+18 more)
backup/python-cellframe.legacy/: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_egg.sh  easy_install  setup.py
backup/python-cellframe.legacy/CellFrame/: __init__.py  python-cellframe.c  python-cellframe_common.c
backup/python-cellframe.legacy/debian/: changelog  control  rules
backup/python-cellframe.legacy/include/: python-cellframe.h  python-cellframe_common.h
backup/python-cellframe.legacy/test/: main_test.py
conftool/: CMakeLists.txt  build_config.h  cellframe-node-config.h  confctl.cpp  main.cpp
conftool/commands/: ConditionCommand.cpp  ConditionCommand.h  ConfigCommand.cpp  ConfigCommand.h  FromTemplateCommand.cpp  FromTemplateCommand.h  NetworkCommand.cpp  NetworkCommand.h  NetworkListCommand.cpp  NetworkListCommand.h  PluginsCommand.cpp  PluginsCommand.h  ServiceCommand.cpp  StorageCommand.cpp  StorageCommand.h  abstractcommand.cpp  abstractcommand.h  conditioncommand.cpp  conditioncommand.h  configcommand.cpp  configcommand.h  diagcommand.cpp  diagcommand.h  fromtemplatecommand.cpp  fromtemplatecommand.h  networkcommand.cpp  networkcommand.h  servicecommand.cpp  servicecommand.h  storagecommand.cpp  storagecommand.h
conftool/config/: CellframeConfigFile.cpp  CellframeConfigFile.h  cellframeconfigfile.cpp  cellframeconfigfile.h
conftool/service/: macos_auth.h  macos_auth.m  service.h  service_linux.cpp  service_macos.cpp  service_win.cpp
conftool/ui/: question.cpp
diagtool/: AbstractDiagnostic.cpp  AbstractDiagnostic.h  CMakeLists.txt  DiagnosticWorker.cpp  DiagnosticWorker.h  LinuxDiagnostic.cpp  LinuxDiagnostic.h  MacDiagnostic.cpp  MacDiagnostic.h  NodeDiagnostic.pro  WinDiagnostic.cpp  WinDiagnostic.h  main.cpp
docs/examples/basic/: CMakeLists.txt  build.sh  dap_basic_example  dap_basic_example.c
lib/mongoc/: CMakeLists.txt
lib/mongoc/libmongoc/: CMakeLists.txt
libdap-chain-global-db/: CMakeLists.txt  dap_chain_global_db.c  dap_chain_global_db.h
test/: CMakeLists.txt  dap_global_db_test.c  dap_global_db_test.h  dap_tx_test.c  dap_tx_test.h  main.c
test/locale/etc/: local.cfg
test/locale/share/: kelvin-node.service
tests/: .gitignore  CMakeLists.txt  PERFORMANCE_BASELINE.md  README.md  SCENARIO_DEFAULTS_AND_GROUPS.md  SUMMARY.md  TESTING_GUIDE.md  clean.sh  collect_artifacts.py  dap_config_helper.py  pytest.ini  run.sh  run_tests.py  run_tests.sh  stage-env.cfg  test_base58.cpp  test_dap_core.py  test_dap_detailed.py  test_dap_integration.py  test_example.c  test_network_status.cpp  tests-in-docker
tests/c_tests/: CMakeLists.txt
tests/cmocka/: test_memory.c
tests/common/: README.md  create_test_cert.yml  create_wallet.yml  defaults.yml
tests/common/networks/: single_node.yml
tests/common/operands/: cert.yml
tests/common/wallets/: create_wallet.yml
tests/e2e/: README.md  arbitrage.yml  chain.yml  integration.yml  mempool.yml  net.yml  node.yml  suite.yml  token.yml  utxo_blocking.yml  wallet.yml
tests/e2e/arbitrage/: 001_arbitrage_bypass.yml
tests/e2e/blocks/: test_block_production.yml  test_block_sync.yml  test_long_offline_catchup.yml
tests/e2e/chain/: 001_chain_list.yml  002_chain_atom.yml
tests/e2e/consensus/: test_consensus_quorum_loss.yml  test_dag_poa_consensus.yml  test_esbocs_status.yml  test_simultaneous_restart.yml  test_validator_freeze.yml  test_validator_penalty.yml  test_validator_quorum.yml
tests/e2e/edge_cases/: test_concurrent_operations.yml  test_invalid_inputs.yml  test_recovery_scenarios.yml
tests/e2e/examples/: test_version_compatibility.yml  test_vpn_node.yml
tests/e2e/integration/: 001_full_token_lifecycle.yml  002_multi_node_connectivity.yml
tests/functional/: README.md  chain.yml  mempool.yml  net.yml  node.yml  suite.yml  token.yml  transaction.yml  utxo_blocking.yml  wallet.yml
tests/helpers/: node_control.sh  test_results.xml  test_utils.sh
tests/integration/: test_basic_integration.py  test_binary_plugins.sh  test_cellframe_node_integration.py  test_cellframe_node_real.py  test_ci_continuous_integration.py  test_dap_integration.py  test_end_to_end_workflows.py  test_network_validation.py  test_node_startup.sh  test_plugin_auto_loading.py  test_python_api_symbols.py  test_python_plugins.sh
tests/performance/: test_plugin_dependency_performance.py
tests/regression/: README.md  arbitrage_arguments.yml  arbitrage_availability.yml  bug_20138_signature_validation.yml  bug_20273_balance_zeroing.yml
tests/scenarios/: COOKBOOK.md  GETTING_STARTED.md  README.md  REFERENCE.md  TROUBLESHOOTING.md
tests/stage-env/: .dockerignore.cert  .gitignore  Dockerfile.builder  Dockerfile.cellframe  Dockerfile.cert-generator  Dockerfile.tests  README.md  docker-compose.generated.yml  docker-compose.yml  requirements-reports.txt  requirements.txt  stage-env  stage_env.py
tests/unit/: run_all_tests.py  test_common.py  test_events.py  test_global_db.py  test_plugin_basic.py  test_plugin_dependency_manager.py  test_plugin_infrastructure.py
tests/utxo_blocking/: arbitrage_bypass_test.yml  token_update_utxo_add.yml  tx_create_arbitrage.yml
tests/utxo_blocking_e2e/: arbitrage_bypass.yml  blocked_utxo_transfer.yml
(+2545 files in other folders)
